fix some alignment issues in the student dashboard

--- a/tutor/src/screens/student-dashboard/styles/progress-guide.scss
+++ b/tutor/src/screens/student-dashboard/styles/progress-guide.scss
@@ -56,6 +56,7 @@
       width: 100%;
       text-overflow: ellipsis;
       overflow: hidden;
+      min-height: 40px;
     }
 
     &.empty .actions-box{
